[gd_scene load_steps=10 format=3 uid="uid://brliao6hafp1w"]

[ext_resource type="Script" uid="uid://cip2br1bu211x" path="res://Mision5/mision5.gd" id="1_grvwb"]
[ext_resource type="FontFile" uid="uid://dudo3khf2v3o4" path="res://VT323-Regular.ttf" id="2_eyvh5"]
[ext_resource type="Texture2D" uid="uid://cbrskk22q2wth" path="res://letreroMision3.png" id="3_mr1ps"]
[ext_resource type="Texture2D" uid="uid://ctjbmwr0gakao" path="res://boton.png" id="4_n3rcx"]
[ext_resource type="Texture2D" uid="uid://j4ncx0mcm8xv" path="res://ayuda.png" id="5_n3rcx"]

[sub_resource type="TileSet" id="TileSet_eyvh5"]

[sub_resource type="LabelSettings" id="LabelSettings_mr1ps"]
font = ExtResource("2_eyvh5")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_eyvh5"]
font = ExtResource("2_eyvh5")

[sub_resource type="LabelSettings" id="LabelSettings_asxaa"]
font = ExtResource("2_eyvh5")
font_size = 15

[node name="Node2D" type="Node2D"]

[node name="BackGround" type="TileMap" parent="."]
format = 2

[node name="TileMapLayer" type="TileMapLayer" parent="BackGround"]
tile_set = SubResource("TileSet_eyvh5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 479.0
offset_bottom = 270.0
script = ExtResource("1_grvwb")

[node name="PanGrafo" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 353.0
offset_bottom = 232.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 366.0
offset_top = 16.0
offset_right = 470.0
offset_bottom = 229.0

[node name="BtnIniciar" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Iniciar"

[node name="LblTime" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_mr1ps")
horizontal_alignment = 1

[node name="lblRecorrido" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "[ ]"
label_settings = SubResource("LabelSettings_eyvh5")
horizontal_alignment = 1
autowrap_mode = 3

[node name="BtnEnviar" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Enviar"
autowrap_mode = 2

[node name="LblIntruccion" type="Label" parent="Control"]
layout_mode = 0
offset_left = 366.0
offset_top = 16.0
offset_right = 470.0
offset_bottom = 67.0
text = "Elige un vertice para iniciar el recorrido"
label_settings = SubResource("LabelSettings_asxaa")
autowrap_mode = 2

[node name="PanelAyuda" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -34.0
offset_top = -2.0
offset_right = 384.0
offset_bottom = 244.0
texture = ExtResource("3_mr1ps")
expand_mode = 1

[node name="LabelExplicacion" type="Label" parent="Control/PanelAyuda"]
layout_mode = 0
offset_left = 72.0
offset_top = 18.0
offset_right = 363.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.016551724, 0.016551726, 0.016551724, 1)
theme_override_fonts/font = ExtResource("2_eyvh5")
theme_override_font_sizes/font_size = 11
text = "En esta misión, el sistema genera una red aleatoria y deberás aplicar todos los algoritmos aprendidos para cerrar definitivamente la brecha: primero realizar un recorrido BFS o DFS para rastrear la corrupción; luego calcular un camino mínimo con Dijkstra o Floyd-Warshall para seleccionar la ruta más segura; después reconstruir la red dañada usando Kruskal o Prim; y finalmente estabilizar la comunicación con un algoritmo de máximo flujo. Superar esta secuencia demuestra tu dominio total del sistema. Si completas todas las etapas, habrás derrotado a NEMESIS y restaurado por completo la red global."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BotonContinuar" type="TextureButton" parent="Control/PanelAyuda"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.9550002
anchor_top = -2.8460002
anchor_right = -3.9550002
anchor_bottom = -2.8460002
offset_left = 1899.1901
offset_top = 882.116
offset_right = 2015.1901
offset_bottom = 934.116
texture_normal = ExtResource("4_n3rcx")

[node name="LabelContinuar" type="Label" parent="Control/PanelAyuda"]
layout_mode = 0
offset_left = 283.0
offset_top = 199.0
offset_right = 348.0
offset_bottom = 222.0
theme_override_colors/font_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_eyvh5")
theme_override_font_sizes/font_size = 13
text = "Continuar "

[node name="BotonAyuda" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 237.0
offset_right = 34.0
offset_bottom = 270.0
texture_normal = ExtResource("5_n3rcx")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Control/VBoxContainer/BtnIniciar" to="Control" method="_on_btn_iniciar_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnEnviar" to="Control" method="_on_btn_enviar_pressed"]
[connection signal="pressed" from="Control/PanelAyuda/BotonContinuar" to="Control" method="_on_boton_continuar_pressed"]
[connection signal="pressed" from="Control/BotonAyuda" to="Control" method="_on_boton_ayuda_pressed"]
